--- a/project/css/style.css
+++ b/project/css/style.css
@@ -54,18 +54,18 @@ body{
 	width: 1002px;
 	margin: 0 auto;
 }
-.part1{
+.social-media{
 	background-color: #f6f6f6;
 	display: flex;
 	justify-content: flex-end;
 	padding-right: 20px;
 }
-.part1 a{
+.social-media a{
 	display: flex;
 	padding: 5px 10px;
 	text-decoration: none;
 }
-.part1 a img{
+.social-media a img{
 	padding-right: 2px;
 }
 .line{
@@ -83,12 +83,12 @@ body{
 .facebook:hover, .twitter:hover{
 	font-weight: bold;
 }
-.part2{
+.menu-part{
 	display: flex;
 	justify-content: space-between;
 	padding: 10px 10px 0 30px;
 }
-.part2 h1 a{
+.menu-part h1 a{
 	background-image: url(../images/logo.png);
 	width: 170px;
 	height: 36px;
@@ -114,14 +114,13 @@ body{
 .menu li a:hover{
 	border-bottom: 5px solid #00cc99;
 }
-.part3{
+.banner{
 	background-image: url(../images/banner.png);
-	width: 1002px;
 	height: 346px;
 	display: flex;
 	align-items: center;
 }
-.part3 h2{
+.banner h2{
 	font-size: 38px;
 	color: white;
 	line-height: 45px;
@@ -129,11 +128,11 @@ body{
 	background-color: rgba(0, 0, 0, 0.2);
 	width: 1002px;
 }
-.part4{
+.main{
 	display: flex;
 	margin: 40px 10px;
 }
-.part4 li{
+.main li{
 	flex: 1;
 	text-align: center;
 	padding: 15px;
@@ -141,22 +140,22 @@ body{
 	box-shadow: 0 2px 2px gray;
 	border-radius: 3px;
 }
-.part4 li div{
+.main li div{
 	height: 150px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 }
-.part4 li h4{
+.main li h4{
 	font-size: 20px;
 	font-weight: bold;
 	padding: 10px;
 }
-.part4 li p{
+.main li p{
 	line-height: 22px;
 	text-align: justify;
 }
-.part4 .list li{
+.main .list li{
 	list-style: disc;
 	text-align: left;
 	padding: 0;
@@ -165,101 +164,97 @@ body{
 	line-height: 22px;
 	list-style-position: inside;
 }
-.part5{
+.chart{
 	padding-bottom: 65px;
 }
-.part5 h3{
+.chart h3{
 	font-size: 25px;
 	font-weight: bold;
 	text-align: center;
 	margin: 10px 0 40px 0;
 }
-.part5 table{
+.chart table{
 	display: flex;
 	justify-content: center;
 }
-.part5 th, .part5 td{
+.chart th, .chart td{
 	width: 190px;
 	text-align: left;
 	padding: 8px 0 12px 23px;
 	border-bottom: 2px solid #dddddd;
 }
-.part5 th{
+.chart th{
 	border-top: 2px solid #dddddd;
 	font-weight: bold;
 	background: #f7f7f7;
 }
-.part5 tr:hover{
+.chart tr:hover{
 	background-color: #ebfffa;
 }
 .accent{
 	color: #00a67d;
 	font-weight: bold;
 }
-.part6{
+.sheet{
 	background-image: linear-gradient(#00644c, #009772);
 	padding: 30px;
 }
-.part6 h3{
+.sheet h3{
 	font-size: 25px;
 	text-align: center;
 	color: white;
 	line-height: 37px;
 	margin-bottom: 25px;
 }
-.part6 form{
+.sheet form{
 	display: flex;
 }
-textarea{
+.sheet textarea{
 	flex: 1;
 	border-radius: 5px;
 	padding: 10px;
 	width: 442px;
 }
-.part6 ul{
+.sheet .info{
 	flex: 1;
 	margin-left: 28px;
 }
-.part6 label{
+.sheet label{
 	color: white;
 	padding-bottom: 7px;
 	display: block;
 }
-.part6 li input{
+.sheet li input{
 	border-radius: 3px;
 	margin-bottom: 13px;
 	width: 440px;
 	height: 32px;
 	padding-left: 10px;
 }
-textarea:-moz-focusring, .part6 li input:-moz-focusring{
+.sheet textarea:focus, .sheet li input:focus{
 	background-color: rgb(224, 224, 224);
 	outline: 0;
 	border-color: #94989b;
-    -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.075),0 0 8px rgba(59, 149, 223, 0.6);
 	box-shadow: inset 0 1px 2px rgba(0,0,0,.075),0 0 8px rgba(59, 149, 223, 0.6);
 }
-textarea:focus, .part6 li input:focus{
-	background-color: rgb(224, 224, 224);
-	outline: 0;
-	border-color: #94989b;
-	-webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.075),0 0 8px rgba(59, 149, 223, 0.6);
-	box-shadow: inset 0 1px 2px rgba(0,0,0,.075),0 0 8px rgba(59, 149, 223, 0.6);
+.sheet .button{
+	display: flex;
+	justify-content: flex-end;
 }
-.part6 .button{
+.sheet .button input{
 	background-color: #00cc99;
 	color: white;
 	width: 70px;
 	height: 32px;
 	border-radius: 3px;
 	border: none;
-	margin-left: 380px;
 	margin-top: 6px;
+	cursor: pointer;
 }
-.part6 .button:hover{
+.sheet .button input:hover{
 	background-color: lightseagreen;
 }
-.part7{
+.footer{
 	display: flex;
 	justify-content: space-between;
 	padding: 30px;
