--- a/project/css/style.css
+++ b/project/css/style.css
@@ -100,6 +100,7 @@ body{
 .menu{
 	display: flex;
 	align-items: center;
+	position: relative;
 }
 .menu li a{
 	display: block;
@@ -111,8 +112,19 @@ body{
 	margin: 0 5px 0 8px;
 	border-bottom: 5px solid transparent;
 }
-.menu li a:hover{
+.menu li a:hover, .menu li a.active{
 	border-bottom: 5px solid #00cc99;
+}
+.menu .product{
+	position: absolute;
+	display: none;
+	z-index: 2;
+	background: white;
+}
+.swiper-container {
+	width: 1002px;
+	height: 346px;
+    --swiper-theme-color: #00cc99;
 }
 .banner{
 	background-image: url(../images/banner.png);
@@ -140,6 +152,10 @@ body{
 	box-shadow: 0 2px 2px gray;
 	border-radius: 3px;
 }
+.main li .example-image-link{
+	display: block;
+	text-decoration: none;
+}
 .main li div{
 	height: 150px;
 	display: flex;
@@ -150,10 +166,12 @@ body{
 	font-size: 20px;
 	font-weight: bold;
 	padding: 10px;
+	color: black;
 }
 .main li p{
 	line-height: 22px;
 	text-align: justify;
+	color: black;
 }
 .main .list li{
 	list-style: disc;
@@ -163,6 +181,7 @@ body{
 	box-shadow: none;
 	line-height: 22px;
 	list-style-position: inside;
+	color: black;
 }
 .chart{
 	padding-bottom: 65px;
@@ -277,4 +296,38 @@ body{
 }
 .bottom p a:visited{
 	color: rgb(162, 0, 255);
+}
+.top-box{
+	position: fixed;
+	right: 60px;
+	bottom: 20px;
+}
+.to-top{
+	font-size:250%;
+	text-align:center;
+	color:#00cc99;
+	padding-top:1.8em;
+	display:inline-block;/* or block */
+	position:relative;
+	border-color:#00cc99;
+	text-decoration:none;
+	transition:all .3s;
+}
+.to-top:before{
+	content:'▲';
+	font-size:.9em;
+	position:absolute;
+	top:0;
+	left:50%;
+	margin-left:-.7em;
+	border:solid .13em #00cc99;
+	border-radius:10em;
+	width:1.4em;
+	height:1.4em;
+	line-height:1.3em;
+	border-color:inherit;
+}
+.to-top:hover{
+	color: rgb(255, 145, 0);
+	border-color: rgb(255, 145, 0);
 }
