--- a/project/css/style.css
+++ b/project/css/style.css
@@ -184,7 +184,7 @@ body{
 	color: black;
 }
 .chart{
-	padding-bottom: 65px;
+	margin-bottom: 65px;
 }
 .chart h3{
 	font-size: 25px;
@@ -233,6 +233,7 @@ body{
 	border-radius: 5px;
 	padding: 10px;
 	width: 442px;
+	resize: none;
 }
 .sheet .info{
 	flex: 1;
@@ -243,14 +244,14 @@ body{
 	padding-bottom: 7px;
 	display: block;
 }
-.sheet li input{
+.sheet .form-group input{
 	border-radius: 3px;
 	margin-bottom: 13px;
 	width: 440px;
 	height: 32px;
 	padding-left: 10px;
 }
-.sheet textarea:focus, .sheet li input:focus{
+.sheet textarea:focus, .sheet .form-group input:focus{
 	background-color: rgb(224, 224, 224);
 	outline: 0;
 	border-color: #94989b;
@@ -278,23 +279,23 @@ body{
 	justify-content: space-between;
 	padding: 30px;
 }
-.bottom{
+.contact{
 	display: flex;
 	flex-direction: column;
 }
-.bottom p{
+.contact p{
 	padding: 5px;
 }
-.bottom p a:link{
+.contact p a:link{
 	color: #e12d80;
 }
-.bottom p a:hover{
+.contact p a:hover{
 	color: crimson;
 }
-.bottom p a:active{
+.contact p a:active{
 	color: black;
 }
-.bottom p a:visited{
+.contact p a:visited{
 	color: rgb(162, 0, 255);
 }
 .top-box{
